# Jaskinia_procesy

./: CMakeLists.txt  Makefile  README.md  common.h  common_functions.h  kasjer  kasjer.cpp  logger  logger.cpp  loggerSender.cpp  loggerSender.h  main  main.cpp  messageQueue.cpp  messageQueue.h  message_queue.h  shared_defs.cpp  shared_defs.h  straznik.cpp  zwiedzajacy  zwiedzajacy.cpp
.cache/clangd/index/: kasjer.cpp.CC5A8F3FBE4BEDA3.idx  main.cpp.4FB15D8643F56971.idx  zwiedzajacy.cpp.018A678C84C3486A.idx
